<?xml version="1.0"?>
<package format="3">
  <name>ld90_arcl_bridge</name>
  <version>0.1.0</version>
  <description>ARCL ↔ ROS 2 bridge for Omron LD90</description>
  <maintainer email="you@example.com">Win</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
